[gd_scene load_steps=17 format=2]

[ext_resource path="res://Assets/Custom Fonts/Narrator's Speech.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Game_Objects/GameEndings.gd" type="Script" id=2]
[ext_resource path="res://Game_Objects/fade_in_ending.tres" type="Animation" id=3]
[ext_resource path="res://Game_Objects/fade_out_ending.tres" type="Animation" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.596078, 0.596078, 0.596078, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.67451, 0.211765, 0.105882, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.266667, 0.266667, 0.266667, 1 )

[sub_resource type="DynamicFont" id=14]
outline_size = 1
outline_color = Color( 0.0392157, 0.564706, 0.882353, 1 )
extra_spacing_bottom = 1
extra_spacing_space = 6
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=15]
default_font = SubResource( 14 )
Button/styles/hover = SubResource( 1 )
Button/styles/normal = SubResource( 2 )
Button/styles/pressed = SubResource( 3 )

[sub_resource type="DynamicFont" id=12]
size = 24
extra_spacing_char = 1
extra_spacing_space = 16
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=13]
default_font = SubResource( 12 )

[sub_resource type="DynamicFont" id=18]
size = 14
extra_spacing_bottom = 10
extra_spacing_char = 1
extra_spacing_space = 16
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=19]
default_font = SubResource( 18 )

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 0.478431, 0.0901961, 0.772549, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=16]
outline_size = 1
outline_color = Color( 0.0392157, 0.564706, 0.882353, 1 )
extra_spacing_bottom = 1
extra_spacing_space = 6
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=21]
default_font = SubResource( 16 )
Button/styles/hover = SubResource( 1 )
Button/styles/normal = SubResource( 20 )
Button/styles/pressed = SubResource( 3 )

[node name="GameoverScreens" type="Control"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -280, -88 )
script = ExtResource( 2 )

[node name="DeathScreen" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.431373, 0.462745, 0.207843, 1 )

[node name="ReturnToMenuButton" type="Button" parent="DeathScreen"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -448.0
margin_top = -101.0
margin_right = -22.0
margin_bottom = -32.0
theme = SubResource( 15 )
text = "RETURN TO MAIN MENU"

[node name="RestartGameButton" type="Button" parent="DeathScreen"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -960.0
margin_top = -101.0
margin_right = -534.0
margin_bottom = -32.0
theme = SubResource( 15 )
text = "RETRY?"

[node name="Label" type="Label" parent="DeathScreen"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -170.0
margin_top = 94.0
margin_right = 170.0
margin_bottom = 164.0
grow_horizontal = 2
theme = SubResource( 13 )
text = "You have perished."
align = 1
valign = 1
uppercase = true

[node name="FunnyExplanationLabel3" type="Label" parent="DeathScreen"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -472.0
margin_top = 280.0
margin_right = 68.0
margin_bottom = 361.0
grow_horizontal = 2
theme = SubResource( 19 )
text = "Maybe try just 1 more time?"
align = 1
valign = 1
uppercase = true

[node name="SurvivedScreen" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.34902, 0.541176, 0.537255, 1 )

[node name="Label" type="Label" parent="SurvivedScreen"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -170.0
margin_top = 94.0
margin_right = 170.0
margin_bottom = 164.0
grow_horizontal = 2
theme = SubResource( 13 )
text = "You survived!"
align = 1
valign = 1
uppercase = true

[node name="FunnyExplanationLabel" type="Label" parent="SurvivedScreen"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 8.0
margin_top = 296.0
margin_right = 525.0
margin_bottom = 377.0
grow_horizontal = 2
theme = SubResource( 19 )
text = "Wow! Such details!"
align = 1
valign = 1
uppercase = true

[node name="ThankYou" type="Label" parent="SurvivedScreen"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -496.0
margin_top = 376.0
margin_right = 21.0
margin_bottom = 457.0
grow_horizontal = 2
theme = SubResource( 19 )
text = "Thanks for playing!!!"
align = 1
valign = 1
uppercase = true

[node name="FunnyExplanationLabel2" type="Label" parent="SurvivedScreen"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -376.0
margin_top = 240.0
margin_right = 141.0
margin_bottom = 321.0
grow_horizontal = 2
theme = SubResource( 19 )
text = "10/10 - ign
11/10 - Ben
3/4 - joe mama"
valign = 1
uppercase = true

[node name="ReturnToMenuButton" type="Button" parent="SurvivedScreen"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -448.0
margin_top = -101.0
margin_right = -22.0
margin_bottom = -32.0
theme = SubResource( 21 )
text = "RETURN TO MAIN MENU"

[node name="FadeColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fade_in_ending = ExtResource( 3 )
anims/fade_out_ending = ExtResource( 4 )

[connection signal="pressed" from="DeathScreen/ReturnToMenuButton" to="." method="_on_ReturnToMenuButton_pressed"]
[connection signal="pressed" from="DeathScreen/RestartGameButton" to="." method="_on_RestartGameButton_pressed"]
[connection signal="pressed" from="SurvivedScreen/ReturnToMenuButton" to="." method="_on_ReturnToMenuButton_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
